nivasa-macros/tests/trybuild/on_event_invalid_target.stderr
error: `#[on_event]` only supports inherent methods
 --> tests/trybuild/on_event_invalid_target.rs:3:1
  |
3 | #[on_event("user.created")]
  | ^^^^^^^^^^^^^^^^^^^^^^^^^^^
  |
  = note: this error originates in the attribute macro `on_event` (in Nightly builds, run with -Z macro-backtrace for more info)
