nivasa-macros/tests/trybuild/on_event_invalid_target.rs
use nivasa_macros::on_event;

#[on_event("user.created")]
struct EventGateway;

fn main() {}
